--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ anyhow = "1.0.98"
 csv = "1.3.1"
 jiff = { version = "0.2.14", default-features = false, features = ["perf-inline"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_bytes = "0.11.17"
 tar = "0.4.44"
